# u-sel

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.pi/prompts/: opsx-verify.md
hooks/: pre-commit
openspec/changes/archive/2025-05-17-nested-template/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-05-17-nested-template/specs/nested-ui/: spec.md
openspec/changes/archive/2025-05-17-nested-template/specs/template-resolution/: spec.md
openspec/changes/pfzy-search/: design.md  proposal.md  tasks.md
openspec/changes/pfzy-search/specs/fuzzy-search/: spec.md
openspec/changes/placeholder-v2/: design.md  proposal.md  tasks.md
openspec/changes/placeholder-v2/specs/placeholder-v2/: spec.md
src/usel/: __init__.py  app.py  cli.py  config.py  models.py  sels.example.yml
tests/: test_config.py  test_fuzzy_search.py  test_models.py  test_placeholder.py  test_placeholder_errors.py
